--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "car-dealership",
+  "name": "carfront",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.11",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "react": "^16.13.1",
-    "react-csv": "^2.0.3",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-table": "^6.11.5",
-    "react-tiny-virtual-list": "^2.2.0",
-    "react-toastify": "^5.5.0"
+    "@material-ui/core": "^3.9.3",
+    "react": "^16.8.6",
+    "react-csv": "^1.1.1",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
+    "react-table": "^6.10.0",
+    "react-toastify": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +31,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.0",
+    "react-test-renderer": "^16.8.6"
   }
 }
